# worldkit

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: app.py
docs/: api_reference.md  benchmarks.md  changelog.md  cli.md  contributing.md  faq.md  index.md  installation.md  model_zoo.md  quickstart.md  rest_api.md  wk_format_spec.md
docs/api/: config.md  data.md  planning.md  plausibility.md  prediction.md  probing.md  worldmodel.md
docs/guides/: architecture.md  data_preparation.md  model_configs.md  wk_format.md
docs/tutorials/: anomaly_detection.md  benchmark_your_model.md  contribute_model.md  custom_environment.md  deployment.md  export_deploy.md  plan_robot_actions.md  planning.md  train_first_model.md  training.md
examples/: 01_quickstart.py  02_train_from_gym.py  03_plan_to_goal.py  04_anomaly_detection.py  05_export_onnx.py  06_serve_api.py  07_latent_probing.py
notebooks/: 01_quickstart.ipynb  02_train_custom_env.ipynb  03_anomaly_detection.ipynb  04_latent_probing.ipynb  05_model_comparison.ipynb  06_export_deploy.ipynb  07_plan_robot_actions.ipynb  quickstart.ipynb
scripts/: generate_pusht_labels.py  prepare_cartpole.py  prepare_pusht_real.py  push_cartpole_to_hub.py  push_to_hub.py  record_demo_v5.py  train_cartpole.py  train_pusht.py  train_pusht_base.py  update_hub_cards.py
tests/: test_advanced_training.py  test_backends.py  test_bench.py  test_encoder.py  test_env_registry.py  test_export.py  test_federated.py  test_format.py  test_losses.py  test_model.py  test_planning_advanced.py  test_probing.py  test_ros2_export.py  test_server.py  test_visualize.py
worldkit/: __init__.py
worldkit/bench/: __init__.py  leaderboard.py  report.py  runner.py  suite.py  task.py
worldkit/cli/: main.py
worldkit/core/: __init__.py  action_encoder.py  auto_config.py  config.py  distillation.py  encoder.py  format.py  hierarchical_planner.py  jepa.py  losses.py  model.py  online.py  planner.py  predictor.py
worldkit/data/: __init__.py  converter.py  dataset.py  multi_dataset.py  recorder.py
worldkit/envs/: __init__.py  registry.py
worldkit/eval/: __init__.py  comparison.py  probing.py  rollout_gif.py  visualize.py
worldkit/export/: __init__.py  coreml_export.py  ros2_export.py  tensorrt_export.py
worldkit/federated/: __init__.py  client.py  protocol.py  server.py
(+11 files in other folders)
